added index.html for gh-pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Typing Helper</title>
 
     <link rel="icon" href="images/typing_logo_trim.png">
-    <link href="home.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <link href="stats_page.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">        <!-- Google Fonts -->
@@ -29,7 +29,7 @@
     <div class="code-text interactive-container"> text loading... </div>
 </div>
 
-<script src='home.js'></script>
+<script src='index.js'></script>
 
 </body>
 </html>
