fixed file references

--- a/stats_page.html
+++ b/stats_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="stats_page.css">
     <link rel="icon" href="images/typing_logo_trim.png">
 
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<a class="stats_page_toggle code-text" href="home.html" >
+<a class="stats_page_toggle code-text" href="index.html" >
     <i class="fas fa-home fa-lg fa_icon"></i>
     HOME
 </a>
